--- a/logica/aula3/exercicios.html
+++ b/logica/aula3/exercicios.html
@@ -1,9 +1,19 @@
 <meta charset="UTF-8">
 <script>
-    var IDADE1 = 20;
-    var IDADE2 = 20;
-    var IDADE3 = 22;
+    function pulaLinha(){
+        document.write("<br>");
+        document.write("<br>");
+    }
 
-    document.write("A média das idades é <br>");
-    document.write( (IDADE1 + IDADE2 + IDADE3) / 3);
+    function mostra(frase){
+        document.write(frase);
+        pulaLinha();
+    }
+
+    var ano = 2016
+
+    mostra("Flávio tem " + (ano - 1977) + " anos");
+    mostra("Joaquim tem " + (ano - 1996) + " anos");
+    mostra("Barney tem " + (ano - 1976) + " anos");
+
 </script>
