Alterando arquivo, nome do site
Alterando o nome do site

--- a/curso_git/segundo.html
+++ b/curso_git/segundo.html
@@ -2,7 +2,7 @@
  <html>
  <head>
     <meta charset="UTF-8"/>
-    <title>Exemplo de site </title>
+    <title>Welton Vaz de Souza</title>
 </head>
 <body>
      <!-- Conteúdo -->
