--- a/logica2/creeper.html
+++ b/logica2/creeper.html
@@ -22,7 +22,7 @@
       pincel.fillRect(285, 125, 90, 90);
 
       // Retângulo 4: 70, 100 (nariz)
-      pincel.fillStyle = 'black'; //  <-- olho direito
+      pincel.fillStyle = 'black'; //  <--> nariz
       pincel.fillRect(215, 215, 70, 100);
 
       // Retângulos 5 e 6: 40, 110 (parte da boca).
