alterações feitas em Casa feitas no dia 13/02/2017

--- a/logica2/aula02/dquadrado.html
+++ b/logica2/aula02/dquadrado.html
@@ -1,3 +1,5 @@
+<canvas id="tela" width="600" height="400"></canvas>
+
 <script>
     function desenhaQuadrado(x,y,cor) {
         var tela = document.querySelector('canvas');
